Fix UI layout bug and add wechat server simulator

--- a/view/css/css.css
+++ b/view/css/css.css
@@ -19,8 +19,8 @@ a:link{ text-decoration:none; }
 
 .top{ width:100%; height:auto; overflow:hidden; background-color:#f9f9f9; padding-top:15px; padding-bottom:20px;}
 .t_l{ float:left; width:25px; height:45px; margin-left:18px; display:inline;}
-.t_c{ float:left; font-weight:bold; font-size:22px; width:73%; text-align:center;}
-.t_r{ float:right; width:44px; height:44px; margin-right:18px;}
+.t_c{ float:left; font-weight:bold; font-size:1.2em; width:73%; text-align:center;}
+.t_r{ float:right; width:44px; height:44px; margin-right:8px;}
 .cen_a{ width:100%; height:auto; overflow:hidden; margin-top:46px;}
 .ca_01{ float:left; width:77px; height:77px; margin-left:20px; display:inline;}
 .ca_02{ float:left; color:#a0a0a0; font-size:26px; margin-top:18px; margin-left:26px; display:inline;}
@@ -29,7 +29,33 @@ a:link{ text-decoration:none; }
 .cb_01{ float:left; margin-left:18px; display:inline; font-weight:bold;}
 .cen_c{ width:100%; height:auto; overflow:hidden; margin-top:40px;}
 .cc_01{ float:left; width:77px; height:57px; margin-left:20px; display:inline;}
-.cc_02{ float:left; color:#fff; background-image:url(../images/p5.jpg); width:233px; height:75px; margin-left:24px; display:inline; font-size:26px; padding-left:100px; line-height:70px;}
+.cc_02{border: 1em solid #1a96d5;border-image: url(../images/3_07.jpg) 0 42 0 42 stretch;height: 2em;display: inline-block;float: left;margin-top: -0.4em}
+ .cc_02 p{background:#1a96d5;background-origin: content-box;color: #fff;display: inline-block;padding: 0.4em 1em;float: left;}
+ .topic_detail_bg_voice{height: 1.3em;margin-left: -1.3em;margin-right: 0.7em;}
+.topic_detail_left{width:90%;float:left;font-size:1em;margin-top:0.3em;margin-left:5px;}
+.topic_detail_photo{
+     width: 3em;
+     border-radius: 1.5em;
+    margin-bottom: 0.5em;
+     float: left;
+}
+
+.topic_detail_left{width: 80%;float:left;font-size:1em;margin-top:0.3em;}
+.topic_detail_author{display:block;font-size: 1.3em;color: #a0a0a0;letter-spacing: 0;font-family: '宋体';margin-left: 5px;line-height: 1.3em;}
+.topic_detail_photo{
+    width: 3em;
+    border-radius: 1.5em;
+    margin-bottom: 0.5em;
+    float: left;
+}
+.topic_detail_words{border: 1em solid #1a96d5;border-image: url(../images/3_07.jpg) 0 42 0 42 stretch;height: 2em;display: inline-block;float: left;margin-top: -0.4em;}
+.topic_detail_words p{background:#1a96d5;background-origin: content-box;color: #fff;display: inline-block;padding: 0.4em 0.3em;float: left;margin-bottom:3px;}
+.topic_detail_bg_voice{height: 1.3em;margin-left: -1.3em;margin-right: 0.7em;}
+.topic_detail_right{width: 15%;float:right;margin-right: 5px;margin-top: 1.2em;color: #a0a0a0;font-size: 0.8em;}
+.topic_detail_right span{font-size:0.6em;}
+
+.top{ width:100%; height:auto; overflow:hidden; background-color:#f9f9f9; padding-top:15px; }
+
 .cc_03{ float:left; color:#a0a0a0; width:100%; margin-top:40px; font-size:12px;}
 .cc_04{ margin-left:30px; display:inline;}
 .cc_05{ float:right; margin-right:30px;}
